@@ -6,10 +6,23 @@
 	<parent>
 		<groupId>space.arim.dazzleconf</groupId>
 		<artifactId>dazzleconf-parent</artifactId>
-		<version>1.1.1-SNAPSHOT</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>dazzleconf-ext-snakeyaml</artifactId>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation
+						--add-exports
+						space.arim.dazzleconf.ext.snakeyaml/space.arim.dazzleconf.ext.snakeyaml.ness=space.arim.dazzleconf</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	
 	<dependencies>
 		<dependency>
@@ -24,6 +37,10 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
 		</dependency>
 	</dependencies>
 </project>
